# News-App-Backend-Service

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml  run.bat  run.sh  settings.toml
alembic/: env.py
alembic/versions/: d8fca14cd7d8_initial_schema_aligned.py
src/app/: config.py  database.py  dependencies.py  logger.py  main.py  metrics.py  validators.py
src/app/controllers/: news_controller.py
src/app/models/: __init__.py  auth.py  base.py  engagement.py  location.py  news.py  reporter.py  role.py  user.py
src/app/rbac/: rbac_model.conf
src/app/routes/: __init__.py  auth.py  news.py  rbac.py  users.py
src/app/schemas/: auth.py  engagement.py  location.py  news.py  reporter.py  role.py  user.py
src/app/services/: auth_service.py  moderation_service.py  news_service.py  rbac_service.py
src/tests/: test_auth_rbac.py  test_main.py
