[project]
name = "news-app-backend"
version = "0.1.0"
description = "News App Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dynaconf>=3.2.12",
    "fastapi>=0.127.1",
    "uvicorn[standard]>=0.40.0",
    "prometheus_client>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This tells hatchling where your code is!
[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "bandit>=1.7.10",
    "httpx>=0.27.2",
    "commitizen>=4.10.1",
]

# Ruff configuration (Linting + Formatting)
[tool.ruff]
line-length = 88
target-version = "py311"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy configuration (Type checking)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"

# Bandit configuration (Security checks)
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

# Commit message format
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]

bump_message = "bump: version $current_version → $new_version"